--- a/style.css
+++ b/style.css
@@ -6,8 +6,17 @@
 }
 
 body {
-    width: 50%;
+    width: 65%;
     margin: 0 auto 100px;
+}
+
+.title {
+    font-family: "montserrat", sans-serif;
+    margin-top: 35px;
+}
+
+p {
+    margin: 0 0 25px;
 }
 
 .home-images {
@@ -15,19 +24,20 @@ body {
     justify-content: space-between;
 }
 
-img {
+.home-images img {
     display: inline-block;
     width: 32%;
 }
 
-img.recipe {
+img.recipe-image {
     width: 100%;
 }
 
 .home-links {
-    margin: 25px 0 0;
+    margin: 30px 0 0;
     display: flex;
     justify-content: space-between;
+    flex-shrink: 1;
 }
 
 button {
@@ -37,7 +47,7 @@ button {
     font-size: 16px;
     padding: 10px 20px;
     cursor: pointer;
-    flex-shrink: 1;
+    width: 200px;
 }
 
 button:hover {
@@ -46,4 +56,34 @@ button:hover {
 
 a {
     text-decoration: none;
+    font-family: "montserrat";
+}
+
+a:link {
+    color: white;
+}
+
+a:visited {
+    color: white;
+}
+
+a:hover {
+    color: black;
+}
+
+.recipe-body {
+    display: flex;
+    justify-content: space-between;
+}
+
+.recipe-ingred {
+    width: 30%;
+}
+
+.recipe-instruct {
+    width: 60%;
+}
+
+ul, ol, p {
+    line-height: 1.5;
 }
