--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: Roboto, sans-serif;
-    background-color: lightcoral;
+    background-color: blue;
     color: white;
     /* border: 1px solid black; */
 }
